name:                jack
version:             0.0.0.0
synopsis:            Haskell Kaleidoscope tutorial
description:         Port of the Kaleidoscope tutorial for Haskell and LLVM
homepage:            https://github.com/sdiehl/kaleidoscope
license:             MIT
--license-file:        LICENSE-MIT
author:              Raven Iqqe
maintainer:          raviqqe@gmail.com
copyright:           2015 Raven Iqqe
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:         https://github.com/raviqqe/jack

Source-Repository head
    Type: git
    Location: git@github.com:raviqqe/jack.git

executable jack
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base                 >= 4.6
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , containers           >= 0.4
    , optparse-applicative
    , indents
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing

library
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.6
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
